[package]
name = "logframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
lazy_static = "1.4.0"
serde = { version ="1.0.179", features = ["derive"] }
toml = "0.7.6"
solarized = { git = "https://github.com/archification/solarized.git", branch = "main" }
warframe = "1.0.4"
tokio = { version = "1.35.1", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
