[package]
name = "logframe"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.29.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
solarized = { git = "https://github.com/archification/solarized.git", branch = "main" }
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
warframe = "7.0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
